--- a/public/travel_packages.html
+++ b/public/travel_packages.html
@@ -135,8 +135,8 @@
               <form method="post">
                 <div class="row">
                   <div class="input-field col s12 m6">
-                    <input id="country" type="text" class="validate">
-                    <label for="country">Country</label>
+                    <input id="country-input" type="text" class="validate">
+                    <label for="country-input">Country</label>
                   </div>
                   <div class="input-field col s6 m3">
 
@@ -149,12 +149,12 @@
                     <label for="travel-period-to">Date To</label>
                   </div>
                   <div class="input-field col s6 m3">
-                    <input id="listing-name" type="number" class="validate">
-                    <label for="listing-name">Min Price</label>
+                    <input id="min-price" type="number" class="validate">
+                    <label for="min-price">Min Price</label>
                   </div>
                   <div class="input-field col s6 m3">
-                    <input id="listing-name" type="number" class="validate">
-                    <label for="listing-name">Max Price</label>
+                    <input id="max-price" type="number" class="validate">
+                    <label for="max-price">Max Price</label>
                   </div>
                   <div class="col s3 offset-s9">
                     
