--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="https://kit.fontawesome.com/07a638cb97.js" crossorigin="anonymous"></script>
-  <script src="./js/login.js"></script>
+  <script src="./js/user.js"></script>
 
   </body>
 </html>
