--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
   <!-- Modal Structure -->
   <div id="modal-login" class="modal">
-    <form>
+    <form id="login-form">
       <div class="modal-content">
         <h4>Login</h4>
         <div class="row">
