--- a/public/edit_travel.html
+++ b/public/edit_travel.html
@@ -194,7 +194,23 @@
         </form>
       </div>
       <div id="manage-itinerary" class="col s12">
-
+        <table class="highlight responsive-table">
+            <thead>
+              <th>Day</th>
+              <th colspan="2">Activity</th>
+            </thead>
+            <tbody id="data">
+              <tr>
+                <td><input id="day" name="Day" type="number" onkeydown="return event.keyCode !== 69"><label for="Day">Day:</label></td>
+                <td colspan="2"><input id="activity" name="Activity" type="text"><label for="Day">Activity:</label></td>              
+              </tr>
+            </tbody>
+        </table>
+        <div class="right-align">
+          <a style="margin-top: 3vh;" id="update" class="right-align waves-effect waves-light btn-large social whatsapp">
+            <i class="fas fa-plus-square"></i>Add Travel Listing</a>    
+        </div>
+       
       </div>
     </div>
 
@@ -237,7 +253,8 @@
   <script src="js/init.js"></script>
   <script src="https://kit.fontawesome.com/07a638cb97.js" crossorigin="anonymous"></script>
   <script src="./js/user.js"></script>
-  <script src="./js/add_travel_listing.js"></script>
+  <script src="./js/form.js"></script>
+  <script src="./js/edit_travel_listing.js"></script>
   </body>
 </html>
 
