add itinerary done

--- a/public/edit_travel.html
+++ b/public/edit_travel.html
@@ -135,7 +135,7 @@
       <div class="col s12">
         <ul class="tabs" style="margin-bottom: 3vh;">
           <li class="tab col s6"><a href="#edit-travel-container">Edit Travel Packages</a></li>
-          <li id="manage" class="tab col s6"><a href="#manage-itinerary">Manage Itinerary</a></li>
+          <li id="itinerary" class="tab col s6"><a href="#manage-itinerary">Manage Itinerary</a></li>
         </ul>
       </div>
       <div id="edit-travel-container" class="col s12">
@@ -188,7 +188,7 @@
             <a style="margin-top: 3vh;" id="delete" class="right-align waves-effect waves-light btn-large social google">
                 <i class="fas fa-trash-alt"></i>Delete Travel Listing</a>
               <a style="margin-top: 3vh;" id="update" class="right-align waves-effect waves-light btn-large social whatsapp">
-                <i class="fas fa-plus-square"></i>Add Travel Listing</a>
+                <i class="fas fa-plus-square"></i>Update Travel Listing</a>
             </div>
           </div>
         </form>
@@ -207,8 +207,8 @@
             </tbody>
         </table>
         <div class="right-align">
-          <a style="margin-top: 3vh;" id="update" class="right-align waves-effect waves-light btn-large social whatsapp">
-            <i class="fas fa-plus-square"></i>Add Travel Listing</a>    
+          <a id="add" style="margin-top: 3vh;" id="update" class="right-align waves-effect waves-light btn-large social whatsapp">
+            <i class="fas fa-plus-square"></i>Add Itinerary</a>    
         </div>
        
       </div>
