--- a/public/admin_console.html
+++ b/public/admin_console.html
@@ -90,11 +90,11 @@
               <li>
                 <div class="collapsible-header"><i class="material-icons">filter_list</i>Filter Options</div>
                 <div class="collapsible-body">
-                  <form method="post">
+                  <form id="filter-form" method="post">
                     <div class="row">
                       <div class="input-field col s12 m6">
-                        <input id="country-input" type="text" class="validate">
-                        <label for="country-input">Country</label>
+                        <input id="country-filter" type="text" class="validate">
+                        <label for="country-filter">Country</label>
                       </div>
                       <div class="input-field col s6 m3">
     
@@ -114,8 +114,13 @@
                         <input id="max-price" type="number" class="validate">
                         <label for="max-price">Max Price</label>
                       </div>
-                      <div class="col s3 offset-s9">
-                        
+
+                      <div class="col s10 right-align">
+                        <button type="button" class="red btn waves-effect waves-light" id="clear-filters">Clear
+                          <i class="material-icons right">clear</i>
+                        </button>
+                      </div>
+                      <div class="col s2 right-align">
                         <button class="btn waves-effect waves-light" type="submit">Apply
                           <i class="material-icons right">send</i>
                         </button>
@@ -178,6 +183,7 @@
   <script src="js/form.js"></script>
   <script src="js/add_travel_listing.js"></script>
   <script src="js/admin_get_travel_listing.js"></script>
+  <script src="js/filter_listings.js"></script>
   </body>
 </html>
 
