--- a/public/update_listing_details.html
+++ b/public/update_listing_details.html
@@ -45,7 +45,7 @@
         
           <div class="btn">
             <span>Image File</span>
-            <input type="file">
+            <input id="image" type="file">
           </div>
           <div class="file-path-wrapper">
             <input class="file-path validate" type="text">
@@ -63,7 +63,9 @@
         </div>
 
         <div class="right-align">
-          <a style="margin-top: 3vh;" onclick="M.toast({html: 'Travel Package Added!'})" class="right-align waves-effect waves-light btn-large social google">
+          <a id="delete-listing" style="margin-top: 3vh;" class="right-align waves-effect waves-light btn-large social google">
+            <i class="fas fa-trash"></i>Delete Listing</a>
+          <a id="update" style="margin-top: 3vh;" class="right-align waves-effect waves-light btn-large social linkedin">
             <i class="fas fa-plus-square"></i>Update Listing Details</a>
         </div>
 
@@ -74,7 +76,7 @@
     <div class="row">
       <div class="col s12 section">
         <h5>Manage Itinerary</h5>
-        <div class="row">
+        <div id="itinerary-container" class="row">
           <div class="col s12 m6">
             <div class="card blue-grey darken-1" style="margin-left: 0; margin-right: 0;">
               <div class="card-content white-text">
@@ -152,7 +154,10 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="https://kit.fontawesome.com/07a638cb97.js" crossorigin="anonymous"></script>
-
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="./js/user.js"></script>
+  <script src="./js/form.js"></script>
+  <script src="./js/edit_travel_listing.js"></script>
 
   </body>
 </html>
