Last check + touchup + sql db file + new README

--- a/public/travel_packages.html
+++ b/public/travel_packages.html
@@ -31,13 +31,13 @@
                   </div>
                   <div class="input-field col s6 m3">
 
-                    <input id="travel-period-from" type="text" class="datepicker">
-                    <label for="travel-period-from">Date From</label>
+                    <input id="travel-period-from-filter" type="text" class="datepicker">
+                    <label for="travel-period-from-filter">Date From</label>
                   </div>
                   <div class="input-field col s6 m3">
 
-                    <input id="travel-period-to" type="text" class="datepicker">
-                    <label for="travel-period-to">Date To</label>
+                    <input id="travel-period-to-filter" type="text" class="datepicker">
+                    <label for="travel-period-to-filter">Date To</label>
                   </div>
                   <div class="input-field col s6 m3">
                     <input id="min-price" type="number" class="validate">
