--- a/public/admin_console.html
+++ b/public/admin_console.html
@@ -98,12 +98,12 @@
                       <div class="input-field col s6 m3">
     
                         <input id="travel-period-from-filter" type="text" class="datepicker">
-                        <label for="travel-period-from">Date From</label>
+                        <label for="travel-period-from-filter">Date From</label>
                       </div>
                       <div class="input-field col s6 m3">
     
                         <input id="travel-period-to-filter" type="text" class="datepicker">
-                        <label for="travel-period-to">Date To</label>
+                        <label for="travel-period-to-filter">Date To</label>
                       </div>
                       <div class="input-field col s6 m3">
                         <input id="min-price" type="number" class="validate">
